--- a/benchly/templates/home.html
+++ b/benchly/templates/home.html
@@ -1,2 +1,14 @@
-<h1> Benchly </h1>
-Hello world!
+<!DOCTYPE HTML>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>test</title>
+</head>
+<body>
+  <h1>Benchly</h1>
+  {% autoescape off %}
+  {{ plot_div }}
+  {% endautoescape %}
+</body>
+</html>
