--- a/benchlysite/templates/home.html
+++ b/benchlysite/templates/home.html
@@ -11,7 +11,16 @@
 <body>
   <h1>Benchly</h1>
 
-  <!-- Dummy figure for Top Panel -->
+  <!-- Top Panel -->
+  <!-- Buttons to chose the Scenario for the plot -->
+  <form action="#" method="get">
+    <!-- <input type="text" value="8" name="mytextbox" size="1"/> -->
+    <input type="submit" class="btn" value="Scenario 1" name="scenario1"> </br>
+    <input type="submit" class="btn" value="Scenario 2" name="scenario2"> </br>
+    <input type="submit" class="btn" value="Scenario 3" name="scenario3"> </br>
+    <input type="submit" class="btn" value="Scenario 4" name="scenario4"> </br>
+  </form>
+
   <!-- These three lines will make the plot. Put them wherever you want the plot to be -->
   <!-- Django uses double brackets to render Python variables passed by the views to the templates. -->
   {% autoescape off %}
