--- a/benchlysite/benchly/templates/benchly/index.html
+++ b/benchlysite/benchly/templates/benchly/index.html
@@ -10,6 +10,7 @@
   <!-- Keep this line in the head-->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
+<!-- CSS - move to seperate file -->
 <style>
   .scenario-buttons button {
     color: Black;
@@ -18,7 +19,6 @@
     width: 50%;
     display: block;
   }
-
 
   * {
     box-sizing: border-box;
@@ -83,8 +83,6 @@
     }
   }
 
-
-
   /* styling to hide scenario choice for unselected climate variables in top panel */
   .hidden {
     display: none;
@@ -95,10 +93,11 @@
     color: white;
   }
 
-
   </style>
 </head>
 
+<!--Template tags-->
+{% load benchly_extras %}
 
 
 <body>
@@ -108,20 +107,19 @@
 
   <form action="/benchly/{{name}}" method="GET">
     <div class="row">
-    <div class="column1">
-      <h3>Climate Scenario</h3>
-      <p>Scenario: starting year, final emission</p>
+      <div class="column1">
+        <h3>Climate Scenario</h3>
+        <p>Scenario: starting year, final emission</p>
 
-      <!--Create a form to choose the desired scenarios for the selected climate variable
-          Loop over climate variables first, then create a form for each that allows the user
-          to select a set of scenarios. id is, e.g. scenarioatmos_co2-3
-          url is, e.g. http://127.0.0.1:8000/benchly/ocean_co2?scenario3=on&scenario4=on
-      -->
+        <!--Create a form to choose the desired scenarios for the selected climate variable
+            Loop over climate variables first, then create a form for each that allows the user
+            to select a set of scenarios. id is, e.g. scenarioatmos_co2-3
+            url is, e.g. http://127.0.0.1:8000/benchly/ocean_co2?scenario3=on&scenario4=on
+        -->
         <div id="scenario-buttons-top" class="scenario-buttons">
-          {% if name != 'id' and name != 'scenario' and name != 'year' %}
             {% if climateinputs %}
                 {% for inp in climateinputs %}
-                  {% if "scenario1" in request.GET and inp.scenario == 1 %}
+                  {% if "scenario"|addstr:inp.scenario in request.GET %}
                     <input type="checkbox" id="scenario{{name}}-{{inp.scenario}}" name="scenario{{inp.scenario}}"
                       value="on" checked>
                   {% else %}
@@ -133,14 +131,13 @@
             {% else %}
               <p>No scenarios are available.</p>
             {% endif %}
-          {% endif %}
         </div>
     </div>
 
 
     <div id="climate-variables-top" class="climate_variables">
       <h3>Climate Variables</h3>
-      {% for name, value in disp_outyear.get_fields %}
+      {% for name in disp_outyear %}
         {% if name != 'id' and name != 'scenario' and name != 'year' %}
           <!--The following will give us climvar={{name}}, e.g. climvar="atmos_co2" in GET params-->
           {% if 'climvar' in request.GET and request.GET.climvar == name %}
@@ -148,14 +145,10 @@
           {% else %}
             <input type="radio" id="climvarbutton-{{name}}" name="climvar" value="{{name}}">
           {% endif %}
-
           <label for="climvarbutton-{{name}}">{{name}}</label>
           {% endif %}
       {% endfor %}
     </div>
-
-  </form>
-
 
     <div class="column2" id="graph_area">
       <!-- Time series figure -->
@@ -168,57 +161,49 @@
 
   </div>
 
-================================================================================================================
+================================================================================================================<br>
 
 
+  <div class="row">
+    <div class="column1">
+      <h3>Climate Scenario</h3>
+      <p>Scenario: starting year, final emission</p>
+      <div id="scenario-buttons-display" class="scenario-buttons">
+        {% if climateinputs %}
+          {% for inpd in climateinputs %}
+            {% if 'disp_scenario' in request.GET and request.GET.disp_scenario|add:0 == inpd.scenario %}
+              <input type="radio" id="disp-scenario{{inpd.scenario}}" name="disp_scenario" value="{{inpd.scenario}}" checked>
+            {% else %}
+              <input type="radio" id="disp-scenario{{inpd.scenario}}" name="disp_scenario" value="{{inpd.scenario}}">
+            {% endif %}
+            <label for="disp-scenario{{inpd.scenario}}">Scenario {{inpd.scenario}}</label><br>
+          {% endfor %}
+          <input type="submit" value="Submit">
+        {% else %}
+          <p>No scenarios are available.</p>
+        {% endif %}
+      </div>
+  </div>
+
+  <div id="years" class="climate_variables">
+    <h3>Year</h3>
+    <input type="text" placeholder="Enter Year" id="disp_year" name="disp_year">
+    <input type="submit" value="Submit">
+  </div>
+
+  <div class="column2" id="climvardisplay">
+    <br>
+    {% for key, value in disp_outyear.items %} 
+      {% if key != 'id' %}
+        {{ key }}: {{ value }} <br>
+      {% endif %}
+    {% endfor %}
+  </div>
+</div>
+
+</form>
+    
 <br> <br> <br> <br> <br>
 </body>
 
-{% include "benchly/display.html" %}
 </html>
-
-<script>
-  /*****************************************************
-      EVENT LISTENERS FOR USER GENERATED EVENTS
-  ******************************************************/
-
-  /** 
-   * On button click, display the form for the selected scenario
-   */
-  function registerClimVarButton() {
-      let buttons = document.querySelectorAll("#climate-variables-top button");
-      let scenario_sections = document.querySelectorAll("#scenario-buttons-top form");
-
-      const hide_scenario_sections = function()
-      {
-        for(let section of scenario_sections) {
-          section.classList.add("hidden");
-        }
-        for(let button of buttons) {
-          button.classList.remove("selected");
-        }
-      };
-
-      // Loop over the model output climate variables that can be plotted and add an event listener for each
-      // that removes the form elements for each button and adds it back for the selected button
-      for(let i=0; i < buttons.length; ++i) {
-        let button = buttons[i];
-        button.addEventListener("click", function changeForm(event) {
-          hide_scenario_sections();
-          scenario_sections[i].classList.remove("hidden");
-          button.classList.add("selected");
-      });
-      }
-
-      // TODO: Put JS/template code here to make it highlight the button that was just clicked.
-      // buttons[0].click();
-  }
-
-
-
-/*****************************************************
-    EVENTS TRIGGERED WHEN THE DOM IS FINISHED LOADING
-******************************************************/
-//TODO: why are we getting "button is null" for the following?
-window.addEventListener('DOMContentLoaded', registerClimVarButton);
-</script>
