--- a/benchlysite/benchly/templates/benchly/index.html
+++ b/benchlysite/benchly/templates/benchly/index.html
@@ -180,7 +180,7 @@
             {% endif %}
             <label for="disp-scenario{{inpd.scenario}}">Scenario {{inpd.scenario}}</label><br>
           {% endfor %}
-          <input type="submit" value="Submit">
+          <input type="submit" value="Submit" formaction="/URL2">
         {% else %}
           <p>No scenarios are available.</p>
         {% endif %}
