--- a/benchly/templates/home.html
+++ b/benchly/templates/home.html
@@ -42,6 +42,14 @@
       background-color: #f1f1f1;
     }
 
+    .column1_buttom {
+      float: left;
+      width: 20%;
+      padding: 15px;
+      background-color: #f5f7c4;
+
+    }
+
     .column2 {
       float: left;
       width: 80%;
@@ -70,20 +78,119 @@
       color: white;
     }
 
-
-    /* Clear floats after the columns */
-    .row:after {
-      content: "";
-      display: table;
-      clear: both;
+    .climate_state {
+      width: 60%;
+      padding: 15px;
+      float: right;
+      background-color: #f5f7c4;
     }
 
-    /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+    .forNow {
+      width: 20%;
+      padding: 15px;
+      float: left;
+      background-color: #f5f7c4;
+
+    }
+
+    .bottom_area {
+
+      margin-top: 20%;
+
+
+    }
+
+    .top_area {}
+
+    .bottom_header {
+      background-color: #f5f7c4;
+      padding: 5px;
+      text-align: center;
+    }
+
+    mini_header {
+      background-color: #f5f7c4;
+      text-align: right;
+      padding: 5px;
+    }
+
+    .switch {
+      position: relative;
+      display: block;
+      width: 60px;
+      height: 34px;
+      margin-top: 5%;
+    }
+
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .between {
+
+      width: 100%;
+      height: 50%;
+      background-color: #2196F3;
+
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+    }
+
+    input:checked+.slider {
+      background-color: #2196F3;
+    }
+
+    input:focus+.slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked+.slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+      border-radius: 34px;
+    }
+
+    .slider.round:before {
+      border-radius: 50%;
+    }
+
+
+
+    /* Responsive layout - makes the three columns stack on top of each other instead of next to each other
     @media screen and (max-width:600px) {
       .column1 {
         width: 100%;
       }
-    }
+    } */
   </style>
 </head>
 
@@ -96,7 +203,7 @@
     <p>Select scenarios and climate variable to update the graph</p>
   </div>
 
-  <div class="row">
+  <div class="top_area">
     <div class="column1">
       <h2>Climate Scenario</h2>
       <div class="scenario-buttons">
@@ -107,61 +214,190 @@
     </div>
 
 
+
+
+
     <div class="climate_variables">
       <p>Climate Variables</p>
-      <button onclick="updateScenario('scenario1')">climate variable 1</button>
-      <button>climate variable 2</button>
-      <button>climate variable 3</button>
-      <button>climate variable 4</button>
+      <button onclick="updateGraph('variable1')">climate variable 1</button>
+      <button onclick="updateGraph('variable2')">climate variable 2</button>
+      <button onclick="updateGraph('variable3')">climate variable 3</button>
+      <button onclick="updateGraph('variable4')">climate variable 4</button>
     </div>
 
     <div class="column2" id="graph_area">
 
       <h2>Content of Graph</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis
-        velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus
-        leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
     </div>
+
+
 
   </div>
 
 
 
+  <div class="bottom_area">
+
+    <div class="bottom_header">
+      <h1>Climate State Calculator</h1>
+      <p>Select scenarios and year of interest to update the climate state</p>
+    </div>
+
+
+    <div>
+      <div class="column1_buttom">
+        <h2>Climate Scenario</h2>
+        <div class="scenario-buttons">
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </div>
+      </div>
+
+      <div class="forNow">
+        <h3>Enter year of interest:</h3>
+        <select id="year" name="year">
+          <option>year</option>
+          <option value="1940">1940</option>
+          <option value="1941">1941</option>
+          <option value="1942">1942</option>
+          <option value="1943">1943</option>
+          <option value="1944">1944</option>
+          <option value="1945">1945</option>
+          <option value="1946">1946</option>
+          <option value="1947">1947</option>
+          <option value="1948">1948</option>
+          <option value="1949">1949</option>
+          <option value="1950">1950</option>
+          <option value="1951">1951</option>
+          <option value="1952">1952</option>
+          <option value="1953">1953</option>
+          <option value="1954">1954</option>
+          <option value="1955">1955</option>
+          <option value="1956">1956</option>
+          <option value="1957">1957</option>
+          <option value="1958">1958</option>
+          <option value="1959">1959</option>
+          <option value="1960">1960</option>
+          <option value="1961">1961</option>
+          <option value="1962">1962</option>
+          <option value="1963">1963</option>
+          <option value="1964">1964</option>
+          <option value="1965">1965</option>
+          <option value="1966">1966</option>
+          <option value="1967">1967</option>
+          <option value="1968">1968</option>
+          <option value="1969">1969</option>
+          <option value="1970">1970</option>
+          <option value="1971">1971</option>
+          <option value="1972">1972</option>
+          <option value="1973">1973</option>
+          <option value="1974">1974</option>
+          <option value="1975">1975</option>
+          <option value="1976">1976</option>
+          <option value="1977">1977</option>
+          <option value="1978">1978</option>
+          <option value="1979">1979</option>
+          <option value="1980">1980</option>
+          <option value="1981">1981</option>
+          <option value="1982">1982</option>
+          <option value="1983">1983</option>
+          <option value="1984">1984</option>
+          <option value="1985">1985</option>
+          <option value="1986">1986</option>
+          <option value="1987">1987</option>
+          <option value="1988">1988</option>
+          <option value="1989">1989</option>
+          <option value="1990">1990</option>
+          <option value="1991">1991</option>
+          <option value="1992">1992</option>
+          <option value="1993">1993</option>
+          <option value="1994">1994</option>
+          <option value="1995">1995</option>
+          <option value="1996">1996</option>
+          <option value="1997">1997</option>
+          <option value="1998">1998</option>
+          <option value="1999">1999</option>
+          <option value="2000">2000</option>
+          <option value="2001">2001</option>
+          <option value="2002">2002</option>
+          <option value="2003">2003</option>
+          <option value="2004">2004</option>
+          <option value="2005">2005</option>
+          <option value="2006">2006</option>
+          <option value="2007">2007</option>
+          <option value="2008">2008</option>
+          <option value="2009">2009</option>
+          <option value="2010">2010</option>
+          <option value="2011">2011</option>
+          <option value="2012">2012</option>
+          <option value="2013">2013</option>
+          <option value="2014">2014</option>
+          <option value="2015">2015</option>
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+          <option value="2018">2018</option>
+          <option value="2019">2019</option>
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+          <option value="2022">2022</option>
+        </select>
+      </div>
+
+      <div class="climate_state">
+        <div class="mini_header">
+          <h3>Climate State</h3>
+          <p>Fluxes: </p>
+        </div>
+      </div>
+    </div>
 
 
 
-  <p>
-    ================================================================================================================================================================================================================================================================================================================================================================================================
-  </p>
-  <h1>Benchly</h1>
 
-  <!-- Dummy figure for Top Panel -->
-  <!-- These three lines will make the plot. Put them wherever you want the plot to be -->
-  <!-- Django uses double brackets to render Python variables passed by the views to the templates. -->
-  {% autoescape off %}
-  {{ plot_div }}
-  {% endautoescape %}
-  <!-- End Dummy figure for Top Panel -->
 
-  <!-- Dummy data for bottom panel -->
-  <!-- Eventually this will include the results of a query -->
-  <h2>Inputs</h2>
-  Scenario: starting year, final emissions </br>
-  {% for inp in all_inputs %}
-  {{inp.scenario}}: {{inp.start_year}}, {{inp.final_emiss}} </br>
-  {% endfor %}
 
-  <h2>Outputs</h2>
-  Scenario: {{sel_inputs.scenario}} </br>
-  Starting year of reducing CO2 emissions: {{sel_inputs.start_year}} </br>
-  Final CO2 emissions: {{sel_inputs.final_emiss}} </br>
-  </br>
-  {% for cvar in sel_outputs %}
-  Year: {{cvar.year}} </br>
-  Atmos CO2: {{cvar.atmos_co2}} </br>
-  Ocean CO2: {{cvar.ocean_co2}} </br>
-  {% endfor %}
-  <!-- End Dummy data for bottom panel -->
+    <p>
+      ================================================================================================================================================================================================================================================================================================================================================================================================
+    </p>
+    <h1>Benchly</h1>
+
+    <!-- Dummy figure for Top Panel -->
+    <!-- These three lines will make the plot. Put them wherever you want the plot to be -->
+    <!-- Django uses double brackets to render Python variables passed by the views to the templates. -->
+    {% autoescape off %}
+    {{ plot_div }}
+    {% endautoescape %}
+    <!-- End Dummy figure for Top Panel -->
+
+    <!-- Dummy data for bottom panel -->
+    <!-- Eventually this will include the results of a query -->
+    <h2>Inputs</h2>
+    Scenario: starting year, final emissions </br>
+    {% for inp in all_inputs %}
+    {{inp.scenario}}: {{inp.start_year}}, {{inp.final_emiss}} </br>
+    {% endfor %}
+
+    <h2>Outputs</h2>
+    Scenario: {{sel_inputs.scenario}} </br>
+    Starting year of reducing CO2 emissions: {{sel_inputs.start_year}} </br>
+    Final CO2 emissions: {{sel_inputs.final_emiss}} </br>
+    </br>
+    {% for cvar in sel_outputs %}
+    Year: {{cvar.year}} </br>
+    Atmos CO2: {{cvar.atmos_co2}} </br>
+    Ocean CO2: {{cvar.ocean_co2}} </br>
+    {% endfor %}
+    <!-- End Dummy data for bottom panel -->
 
 
 
@@ -172,15 +408,18 @@
 <script>
 
 
-  function updateScenario(input) {
+  function updateGraph(input) {
 
     console.log("bruh")
 
-    if (input == 'scenario1') {
-      document.getElementById("graph_area").innerHTML = "displaying scenario1";
+    if (input == 'variable1') {
+      document.getElementById("graph_area").innerHTML = "variable1";
+    }
+    else if (input == 'variable2') {
+      document.getElementById("graph_area").innerHTML = "variable2";
     }
     else {
-      graph.innerHTML = "displaying a different scenario";
+      document.getElementById("graph_area").innerHTML = "a different variable";
     }
 
 
