--- a/benchlysite/benchly/templates/benchly/index.html
+++ b/benchlysite/benchly/templates/benchly/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE HTML>
 <html>
 
@@ -10,7 +11,7 @@
 
   <!-- CSS - move to seperate file -->
 
-  <link rel="stylesheet" type="text/css" href="template.css" />
+  <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <!--Template tags-->
