--- a/benchlysite/benchly/static/style.css
+++ b/benchlysite/benchly/static/style.css
@@ -1,30 +1,5 @@
 
-Skip to content
 
-    Pricing
-
-Sign in
-Sign up
-prowe12 /
-benchly
-Public
-
-Code
-Issues
-Pull requests
-Actions
-Projects
-Security
-
-    Insights
-
-benchly/benchlysite/benchly/static/style.css
-@CharlieDahle
-CharlieDahle added external style sheet
-Latest commit 5f5f0df Dec 16, 2022
-History
-1 contributor
-89 lines (76 sloc) 1.57 KB
 .scenario-buttons button {
     color: Black;
     padding: 10px 24px;
@@ -35,7 +10,6 @@ History
 
 * {
     box-sizing: border-box;
-
 }
 
 body {
@@ -53,7 +27,7 @@ body {
     border-bottom: solid black 5px
 }
 
-/* Create three equal columns that floats next to each other */
+/* Create three equal columns that float next to each other */
 .column1 {
     float: left;
     width: 20%;
@@ -114,20 +88,3 @@ body {
     background-color: darkgreen;
     color: white;
 }
-Footer
-© 2022 GitHub, Inc.
-Footer navigation
-
-    Terms
-    Privacy
-    Security
-    Status
-    Docs
-    Contact GitHub
-    Pricing
-    API
-    Training
-    Blog
-    About
-
-File Finder · GitHub
