--- a/benchlysite/benchly/templates/benchly/index.html
+++ b/benchlysite/benchly/templates/benchly/index.html
@@ -6,10 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Benchly</title>
-  <!-- Keep this line in the head-->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
-  <!-- CSS - move to seperate file -->
 
   <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
@@ -35,39 +32,37 @@
             url is, e.g. http://127.0.0.1:8000/benchly/ocean_co2?scenario3=on&scenario4=on -->
         <div id="scenario-buttons-top" class="scenario-buttons">
           {% if climateinputs %}
-          {% for inp in climateinputs %}
-          {% if "scenario"|addstr:inp.scenario in request.GET %}
-          <input class="check_box" type="checkbox" id="scenario{{name}}-{{inp.scenario}}"
-            name="scenario{{inp.scenario}}" value="on" checked>
+            {% for inp in climateinputs %}
+              {% if "scenario"|addstr:inp.scenario in request.GET %}
+                <input class="check_box" type="checkbox" id="scenario{{name}}-{{inp.scenario}}" name="scenario{{inp.scenario}}" value="on" checked>
+              {% else %}
+                <input type="checkbox" id="scenario{{name}}-{{inp.scenario}}" name="scenario{{inp.scenario}}" value="on">
+              {% endif %}
+              <label for="scenario{{name}}-{{inp.scenario}}">
+              Scenario {{inp.scenario}}: {{inp.start_year}}, {{inp.final_emiss}}</label><br>
+            {% endfor %}
+            <input type="submit" value="Submit">
           {% else %}
-          <input type="checkbox" id="scenario{{name}}-{{inp.scenario}}" name="scenario{{inp.scenario}}" value="on">
+            <p>No scenarios are available.</p>
           {% endif %}
-          <label for="scenario{{name}}-{{inp.scenario}}">
-            Scenario {{inp.scenario}}: {{inp.start_year}}, {{inp.final_emiss}}</label><br>
-          {% endfor %}
-          <input type="submit" value="Submit">
-          {% else %}
-          <p>No scenarios are available.</p>
-          {% endif %}
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
       </div>
-
 
       <!--Add the climate variable buttons, where only one can be selected at a time
         The names are the keys in the dictionary disp_outyear, so use that -->
       <div id="climate-variables-top" class="climate_variables">
         <h3>Climate Variables</h3>
         {% for name in disp_outyear %}
-        {% if name != 'id' and name != 'scenario' and name != 'year' %}
-        <!--The following will give us climvar={{name}}, e.g. climvar="atmos_co2" in GET params-->
-        {% if 'climvar' in request.GET and request.GET.climvar == name %}
-        <input type="radio" id="climvarbutton-{{name}}" name="climvar" value="{{name}}" checked>
-        {% else %}
-        <input type="radio" id="climvarbutton-{{name}}" name="climvar" value="{{name}}">
-        {% endif %}
-        <label for="climvarbutton-{{name}}">{{name}}</label>
-        {% endif %}
+            {% if name != 'id' and name != 'scenario' and name != 'year' %}
+                <!--The following will give us climvar={{name}}, e.g. climvar="atmos_co2" in GET params-->
+                {% if 'climvar' in request.GET and request.GET.climvar == name %}
+                    <input type="radio" id="climvarbutton-{{name}}" name="climvar" value="{{name}}" checked>
+                {% else %}
+                    <input type="radio" id="climvarbutton-{{name}}" name="climvar" value="{{name}}">
+                {% endif %}
+                <label for="climvarbutton-{{name}}">{{name}}</label>
+            {% endif %}
         {% endfor %}
       </div>
 
@@ -77,7 +72,6 @@
         {% autoescape off %}
         {{ plot_div }}
         {% endautoescape %}
-        <!-- End Dummy figure for Top Panel -->
       </div>
 
     </div>
@@ -87,31 +81,28 @@
         <h3>Climate Scenario</h3>
         <p>Scenario: starting year, final emission</p>
         <div id="scenario-buttons-display" class="scenario-buttons">
-          {% if climateinputs %}
-          {% for inpd in climateinputs %}
-          {% if 'disp_scenario' in request.GET and request.GET.disp_scenario|add:0 == inpd.scenario %}
-          <input type="radio" id="disp-scenario{{inpd.scenario}}" name="disp_scenario" value="{{inpd.scenario}}"
-            checked>
-          {% else %}
-          <input type="radio" id="disp-scenario{{inpd.scenario}}" name="disp_scenario" value="{{inpd.scenario}}">
-          {% endif %}
-          <label for="disp-scenario{{inpd.scenario}}">Scenario {{inpd.scenario}}</label><br>
-          {% endfor %}
-          <button type="submit" value="Submit" formaction="/benchly/{{name}}#scenario-buttons-display">Submit </button>
-          {% else %}
-          <p>No scenarios are available.</p>
-          {% endif %}
-
-
+            {% if climateinputs %}
+                {% for inpd in climateinputs %}
+                    {% if 'disp_scenario' in request.GET and request.GET.disp_scenario|add:0 == inpd.scenario %}
+                        <input type="radio" id="disp-scenario{{inpd.scenario}}" name="disp_scenario" value="{{inpd.scenario}}" checked>
+                    {% else %}
+                        <input type="radio" id="disp-scenario{{inpd.scenario}}" name="disp_scenario" value="{{inpd.scenario}}">
+                    {% endif %}
+                        <label for="disp-scenario{{inpd.scenario}}">Scenario {{inpd.scenario}}</label><br>
+                {% endfor %}
+                <button type="submit" value="Submit" formaction="/benchly/{{name}}#scenario-buttons-display">Submit </button>
+            {% else %}
+                <p>No scenarios are available.</p>
+            {% endif %}
         </div>
       </div>
 
       <div id="years" class="climate_variables">
         <h3>Year</h3>
         {% if 'disp_year' in request.GET and request.GET.disp_year != ''%}
-        <input type="text" placeholder="Enter Year" id="disp_year" name="disp_year" value="{{request.GET.disp_year}}">
+            <input type="text" placeholder="Enter Year" id="disp_year" name="disp_year" value="{{request.GET.disp_year}}">
         {% else %}
-        <input type="text" placeholder="Enter Year" id="disp_year" name="disp_year">
+            <input type="text" placeholder="Enter Year" id="disp_year" name="disp_year">
         {% endif %}
         <button type="submit" value="Submit" formaction="/benchly/{{name}}#scenario-buttons-display">Submit</button>
       </div>
