--- a/benchlysite/benchly/static/style.css
+++ b/benchlysite/benchly/static/style.css
@@ -1,5 +1,3 @@
-
-
 .scenario-buttons button {
     color: Black;
     padding: 10px 24px;
@@ -8,13 +6,21 @@
     display: block;
 }
 
+.top_submit_button {
+    cursor: pointer;
+    width: 50%;
+    padding: 10px 24px;
+}
+
 * {
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
     margin: 0;
 }
+
 
 /* Style the header */
 .header {
@@ -32,13 +38,27 @@ body {
     float: left;
     width: 20%;
     height: 100%;
-    padding: 0px 15px;
+    padding: 0px 10px;
     background-color: #13afdf;
 }
 
 .column2 {
     float: left;
+    width: 30%;
+    padding: 0px 0px;
+    border: 4px solid black;
+}
+
+.graph_area {
+    float: left;
     width: 80%;
+    padding: 0px 0px;
+    border: 4px solid black;
+}
+
+.column3 {
+    float: left;
+    width: 25%;
     padding: 0px 0px;
     border: 4px solid black;
 }
@@ -50,6 +70,7 @@ body {
     float: right;
     width: 80%;
     padding: 0px 15px 10px;
+
 }
 
 /* .climate_variables button {
