--- a/benchlysite/benchly/static/style.css
+++ b/benchlysite/benchly/static/style.css
@@ -4,12 +4,21 @@
     cursor: pointer;
     width: 50%;
     display: block;
+    border-radius: 12px;
+}
+
+.scenario-buttons input {
+    color: Black;
+    cursor: pointer;
+    border-radius: 12px;
+    padding-bottom: 15px
 }
 
 .top_submit_button {
     cursor: pointer;
     width: 50%;
     padding: 10px 24px;
+    border-radius: 12px;
 }
 
 * {
