Add updated project plan

--- a/benchlysite/benchly/templates/benchly/index.html
+++ b/benchlysite/benchly/templates/benchly/index.html
@@ -17,7 +17,8 @@
 
 <body>
   <div class="header">
-    <h1>Cambio Climate Model, by Benchly</h1>
+    <h1>Benchly's Climate Model Interface</h1>
+    <h3>Powered by Prof. Neshyba's CAMBIO model</h3>
   </div>
 
   <form action="/benchly/{{name}}" method="GET">
